# taptempo

./: .gitignore  LICENSE  README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: .#tests.yml  tests.yml
src/taptempo/: __main__.py  gui.py  midi.py  taptempo.py
tests/: test_gui.py  test_taptempo.py
