[metadata]
name = taptempo
version = 1.1.0
author = Tarik Havighorst
author_email = author@example.com
description = A simple GUI program to tap-in a tempo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blurks/taptempo
project_urls =
    Bug Tracker = https://github.com/blurks/taptempo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyrtmidi
scripts = bin/taptempo

[options.packages.find]
where = src
