[metadata]
name = taptempo
version = 1.1.1
author = Tarik Havighorst
author_email = code@blurks.de
description = A simple GUI program to tap-in a tempo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blurks/taptempo
project_urls =
    Bug Tracker = https://github.com/blurks/taptempo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    rtmidi
scripts = bin/taptempo

[options.packages.find]
where = src

[options.extras_require]
test =
	 flake8
	 pytest
	 pytest-mock
	 pytest-cov
	 tox

[tool:pytest]
addopts = --cov src/taptempo --cov-report=term-missing
